--- a/depronto-website/src/topbar/topbar.css
+++ b/depronto-website/src/topbar/topbar.css
@@ -19,3 +19,80 @@
 .topCenter {
     flex:8;
 }
+.navbar {
+    width:100%;
+    height:2rem;
+    display:flex;
+    justify-content: space-around;
+    align-items:center;
+}
+.navbar-items {
+    width:100%;
+    height:3rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: 0.75rem;
+    margin:0;
+    padding:0;
+    text-align: center;
+}
+.navbar-items li {
+    list-style: none ;
+    flex:1;
+    height: 1.5rem;
+    align-items:center;
+    border: 0.001rem solid gray;
+    padding-top:0.5rem;
+    padding-bottom: 0;
+    color:gray;
+    cursor:pointer;
+}
+.navbar-items :hover {
+    border-bottom: 2px solid red;
+}
+.navbar-contents {
+    display:none;
+    background-color: white;
+    width:100%;
+    margin:0;
+  border-radius: 4px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 10000;
+}
+.navbar-items li:hover .navbar-contents {
+    display:flex;
+    width:100vw;
+    height:auto;
+    justify-content: space-evenly;
+    align-items: justify;
+    background-color: white;
+    font-size:0.75rem;
+    font-family:'Playfair Display',sans-serif;
+    padding:3rem;
+}
+.navbar-items:hover .navbar-contents li{
+    list-style: none;
+    border:0;
+}
+.navbar-contents li:hover {
+    border-bottom: 0;
+}
+.navbar-items:hover .navbar-contents li a{
+    text-decoration: none;
+    color:gray;
+    border-bottom: 0;
+}
+.info{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    width:100%;
+    height:1.5rem;
+    font-size: 0.75rem;
+    font-family: 'Playfair Display',sans-serif;
+    font-weight:700;
+    background-color: salmon;
+    text-decoration: underline;
+    cursor: pointer;
+}
